[package]
name = "probo-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = { version = "0.16", features = ["rt_tokio_1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
thiserror = "1"
